--- a/lineman/app/templates/discussion_items/new_comment.haml
+++ b/lineman/app/templates/discussion_items/new_comment.haml
@@ -3,16 +3,16 @@
   .thread-event-header.media
     .pull-left{ng-include: "'generated/templates/user/avatar.html'", ng-init: 'user = comment.author()'}
     .media-body
-      %span{ng-show: 'comment.parentId', translate: 'new_comment_item.in_reply_to', translate-values: '{author: comment.authorName(), recipient: comment.parentAuthorName()}'}
+      %span{ng-show: 'comment.parentId', translate: 'new_comment_item.in_reply_to', translate-values: '::{author: comment.authorName(), recipient: comment.parentAuthorName()}'}
       %span{ng-hide: 'comment.parentId'}
-        %strong {{comment.authorName()}}
+        %strong {{::comment.authorName()}}
   .thread-event-body{btf-markdown: 'comment.body' }
 
   .thread-attachments
     .thread-attachment{ng-repeat: 'attachment in comment.attachments()'}
       %a{ng-href: '{{attachment.location}}', target: '_blank'}
-        {{ attachment.filename }}
-      ({{attachment.filesize | fileSize}})
+        {{::attachment.filename }}
+      ({{::attachment.filesize | fileSize}})
 
   .thread-event-footer
     .thread-actions-and-meta
