--- a/app/assets/stylesheets/unstructured/_main.css.scss
+++ b/app/assets/stylesheets/unstructured/_main.css.scss
@@ -26,6 +26,18 @@ form {
     margin-bottom: 0;
     height: 200px;
   }
+  .error{
+    color: $error-color;
+  }
+  .field_with_errors label {
+    color: $error-color
+  }
+  .field_with_errors input {
+    border-color: $error-color
+  }
+  .field_with_errors textarea {
+    border-color: $error-color
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
