--- a/lineman/app/pages/index.haml
+++ b/lineman/app/pages/index.haml
@@ -6,6 +6,8 @@
     %meta{content: 'IE=Edge', 'http-equiv': 'X-UA-Compatible'}
     %meta{content: 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name: "viewport"}
     %link{href: '/css/app.css', media: 'screen', rel: 'stylesheet', type: 'text/css'}
+    %link{href: '//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css', rel: 'stylesheet'}
+
     %base{href: '/'}
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -15,7 +17,19 @@
     %header#header
       %nav.navbar.navbar-default.navbar-static-top
         .container
-          .navbar-header
+          .navbar-header.text-center
+            .col-xs-2
+              %img.menu-image{src: 'img/logo.jpg'}
+            .col-xs-1
+            .col-xs-2
+              %i.fa.fa-2x.fa-inbox.menu-icon
+            .col-xs-2
+              %i.fa.fa-2x.fa-search.menu-icon
+            .col-xs-2
+              %i.fa.fa-2x.fa-users.menu-icon
+            .col-xs-1
+            .col-xs-2
+              %i.fa.fa-2x.fa-bars.menu-icon.bordered-icon
 
     %main{ng_view: ''}
 
