--- a/app/views/group_requests/_form.html.haml
+++ b/app/views/group_requests/_form.html.haml
@@ -5,4 +5,10 @@
   = f.input :is_commercial, as: :select, collection: [[t(:'group_request.commercial_use_option'), true],[t(:'group_request.non_commercial_use_option'), false]], prompt: t(:'common.select')
   = f.input :description, as: :text, required: false
   = f.input :payment_plan, as: :hidden
-  = f.submit submit_label, class: 'btn btn-info btn-lg', :data => { :disable_with => submit_label }, id: 'sign-up-submit'
+  - if true
+    %a{ :class => 'btn btn-info btn-lg commercial-modal-toggle', :data => { :toggle => :modal, :target => "#commercial" } } 
+      = submit_label
+    = render 'modal_commercial', f: f, submit_label: submit_label
+    = render 'modal_non_commercial', f: f, submit_label: submit_label
+  - else
+    = f.submit submit_label, class: 'btn btn-info btn-lg', :data => { :disable_with => submit_label }, id: 'sign-up-submit'
