Put images of unwitting victims on the internet

--- a/app/views/group_requests/_commercial.haml
+++ b/app/views/group_requests/_commercial.haml
@@ -3,7 +3,7 @@
     %h1.buffer-bottom Sign up for your free Loomio trial
     .wrapper
       .col-xs-2.text-center.buffer-bottom
-        = image_tag 'http://www.placehold.it/75x75', class: 'img-circle'
+        = image_tag 'people/jimmy.png', class: 'img-circle'
       .col-xs-8
         .quote.buffer-bottom
           %p "Loomio is a tool that gives everybody a voice. Decisions are being made by the people affected by them."
