--- a/app/views/group_requests/_non_commercial.haml
+++ b/app/views/group_requests/_non_commercial.haml
@@ -3,7 +3,7 @@
     .wrapper
       %h1.buffer-bottom Free for non-commercial use
       .col-xs-2.text-center.buffer-bottom
-        = image_tag 'http://www.placehold.it/75x75', class: 'img-circle'
+        = image_tag 'people/ross.png', class: 'img-circle'
       .col-xs-8
         .quote.buffer-bottom
           %p "Loomio is fast and flexible, so we can give more volunteers a stake, and make better informed decisions."
