Fix commercial contact link

--- a/app/views/group_requests/_commercial.haml
+++ b/app/views/group_requests/_commercial.haml
@@ -17,4 +17,4 @@
         .buttons.text-right.buffer-bottom.clearfix
           = f.submit 'Start your free trial', class: 'btn btn-success hero-text btn-lg col-xs-12', id: 'sign-up-submit'
         .footnote
-          = "In the wrong place? If you're using Loomio for a community project, #{link_to 'Click Here', 'javascript:;', class: 'commercial-page-toggle'}. If you have any questions, #{link_to 'get in touch', 'javascript:;'}.".html_safe
+          = "In the wrong place? If you're using Loomio for a community project, #{link_to 'Click Here', 'javascript:;', class: 'commercial-page-toggle'}. If you have any questions, #{link_to 'get in touch', '/contact'}.".html_safe
