--- a/app/views/group_requests/_commercial.haml
+++ b/app/views/group_requests/_commercial.haml
@@ -7,6 +7,7 @@
       .col-xs-8
         .quote.buffer-bottom
           %p "Loomio is a tool that gives everybody a voice. Decisions are being made by the people affected by them."
+
           %p - Ross Phillips, Pathways
         %ul.features.buffer-bottom
           %li $2/person/month
@@ -14,7 +15,8 @@
           %li hassle-free cloud hosting
           %li custom privacy controls
           %li priority support
+          %li discounts available for large groups
         .buttons.text-right.buffer-bottom.clearfix
           = f.submit 'Start your free trial', class: 'btn btn-success hero-text btn-lg col-xs-12', id: 'sign-up-submit'
         .footnote
-          = "In the wrong place? If you're using Loomio for a community project, #{link_to 'Click Here', 'javascript:;', class: 'commercial-page-toggle'}. If you have any questions, #{link_to 'get in touch', '/contact'}.".html_safe
+          = "In the wrong place? If you're using Loomio for a community project, #{link_to 'click here', 'javascript:;', class: 'commercial-page-toggle', id: 'switch-to-non-commercial'}. If you have any questions, #{link_to 'get in touch', '/contact'}.".html_safe
