--- a/app/views/marketing/index.html.haml
+++ b/app/views/marketing/index.html.haml
@@ -43,7 +43,7 @@
                 %i.fa.fa-facebook
             %li.hidden-xs= link_to t(:'frontpage.link.blog'), blog_path, class: 'blog'
             %li= link_to t(:'frontpage.link.contact'), contact_path, class: 'contact'
-            %li= link_to t(:'frontpage.link.try_it'), try_it_path, class: 'try-it', id: 'try-it-nav'
+            %li= link_to t(:'frontpage.link.try_it'), new_group_request_path, class: 'try-it', id: 'try-it-nav'
             %li.pull-right= link_to t(:'frontpage.link.log_in'), new_user_session_path, class: 'btn btn-orange'
 
       .row.hero
@@ -51,7 +51,7 @@
           =image_tag 'globe.png', class: 'image'
           %h1.header= t(:'frontpage.hero.head_html')
           %p.hero-text.description= t(:'frontpage.hero.desc_html', default: :'frontpage.hero.desc')
-          =link_to try_it_path, class: 'btn btn-teal btn-lg hero-text js-not-yet-button', id: 'try-it-main' do
+          =link_to new_group_request_path, class: 'btn btn-teal btn-lg hero-text js-not-yet-button', id: 'try-it-main' do
             = t(:'frontpage.link.try_loomio_beta')
             %i.fa.fa-angle-right
 
@@ -92,7 +92,7 @@
               = t(:'frontpage.link.video')
 
       .row.crowdfunding
-        = link_to try_it_path, class: 'block-link js-not-yet-row' do
+        = link_to new_group_request_path, class: 'block-link js-not-yet-row' do
           .content
             %h1= t(:'frontpage.prototype.header_html')
             %h2
@@ -155,7 +155,7 @@
               = image_tag 'nvc-logo.png', alt: "Generation Zero"
       .row.links
         .content
-          %p.hero-text= t(:'frontpage.prototype.subhead_html', try_loomio_link: try_it_path, donate_link: 'https://love.loomio.org')
+          %p.hero-text= t(:'frontpage.prototype.subhead_html', try_loomio_link: new_group_request_path, donate_link: 'https://love.loomio.org')
 
       .row.quote
         .content.rushkoff
