--- a/app/assets/stylesheets/unstructured/_main.css.scss
+++ b/app/assets/stylesheets/unstructured/_main.css.scss
@@ -195,8 +195,14 @@ ul, ol, li {
   background: #aaa;
 }
 
-.field_with_errors { display: inline; }
-
+.field_with_errors {
+  display: inline;
+}
+span.error {
+  color: $error-color;
+  display: block;
+  margin-bottom: 1em;
+}
 .inline-help { color: $error-color; }
 .hint {
   clear: both;
