--- a/app/views/group_requests/_commercial.haml
+++ b/app/views/group_requests/_commercial.haml
@@ -1,12 +1,12 @@
 .container.commercial-page{ :id => 'commercial' }
-  .col-xs-10
+  .col-md-10
     %h1.buffer-bottom Loomio for organisations
-    .wrapper
-      .col-xs-8
+    .row.wrapper
+      .col-md-8
         .row
-          .col-xs-2.text-center.buffer-bottom
-            = image_tag 'people/ross.png', class: 'img-circle'
-          .col-xs-10
+          .col-xs-3.text-center.buffer-bottom
+            = image_tag 'people/ross.png', class: 'img-circle', style: 'max-width: 100%'
+          .col-xs-9
             .quote.buffer-bottom
               %p "Loomio is a tool that gives everybody a voice. Decisions are being made by the people affected by them."
 
@@ -19,6 +19,6 @@
           %li priority support
           %li discounts available for large groups
         .buttons.text-right.buffer-bottom.clearfix
-          = f.submit 'Start your free trial', class: 'btn btn-success hero-text btn-lg col-xs-12', id: 'sign-up-submit'
+          = f.submit 'Start your free trial', class: 'btn btn-success hero-text btn-lg col-xs-12', id: 'commercial-sign-up-submit'
         .footnote
           = "In the wrong place? If you're using Loomio for a community project, #{link_to 'click here', 'javascript:;', class: 'commercial-page-toggle', id: 'switch-to-non-commercial'}. If you have any questions, #{link_to 'get in touch', '/contact'}.".html_safe
