--- a/app/views/group_requests/_non_commercial.haml
+++ b/app/views/group_requests/_non_commercial.haml
@@ -1,12 +1,12 @@
 .container.commercial-page{ :id => 'non-commercial' }
-  .col-xs-10
-    .wrapper
+  .col-md-10
+    .row.wrapper
       %h1.buffer-bottom Free for non-commercial use
-      .col-xs-8
+      .col-md-8
         .row
-          .col-xs-2.text-center.buffer-bottom
-            = image_tag 'people/jimmy.png', class: 'img-circle'
-          .col-xs-10
+          .col-xs-3.text-center.buffer-bottom
+            = image_tag 'people/jimmy.png', class: 'img-circle', style: 'max-width: 100%'
+          .col-xs-9
             .quote.buffer-bottom
               %p "Loomio is fast and flexible, so we can give more volunteers a stake, and make better informed decisions."
               %p= "- Jimmy Green, #{link_to 'Generation Zero', 'http://www.generationzero.org/', target: 'blank'}".html_safe
@@ -14,6 +14,6 @@
           If your community doesn't have the resources to pay for software, we |
           want you to use Loomio free. It's our gift to you.
         .buttons.buffer-bottom.clearfix
-          = f.submit 'Start your free Loomio group', class: 'btn btn-success hero-text btn-lg col-xs-12', id: 'sign-up-submit'
+          = f.submit 'Start your free Loomio group', class: 'btn btn-success hero-text btn-lg col-xs-12', id: 'non-commercial-sign-up-submit'
         .footnote
           = "In the wrong place? If you're using Loomio for a company or formal organisation, #{link_to 'click here', 'javascript:;', class: 'commercial-page-toggle', id: 'switch-to-commercial'}. If you have any questions, #{link_to 'get in touch', '/contact'}.".html_safe
