--- a/lineman/app/css/proposal_card.scss
+++ b/lineman/app/css/proposal_card.scss
@@ -17,3 +17,38 @@
 
 }
 
+.pie-chart {
+
+}
+
+.pie-chart-pie {
+  width: 120px;
+  height: 120px;
+}
+.pie-chart-legend {
+  color: $meta-text-color;
+  @include fontMedium;
+  @include fontHelvetica;
+}
+
+.pie-chart-legend-item{
+  margin: 5px;
+  padding-left: 5px;
+  line-height: 15px;
+}
+
+.pie-chart-legend-item-yes{
+  border-left: 15px solid #90D490;
+}
+
+.pie-chart-legend-item-abstain{
+  border-left: 15px solid #F0BB67;
+}
+
+.pie-chart-legend-item-no{
+  border-left: 15px solid #D49090;
+}
+
+.pie-chart-legend-item-block{
+  border-left: 15px solid #dd0000;
+}
