--- a/lineman/app/css/vote_form.scss
+++ b/lineman/app/css/vote_form.scss
@@ -2,10 +2,14 @@
 
 }
 
+.position-buttons {
+  margin-bottom: 5px;
+}
 .position-button {
   display: inline-block;
   width: 60px;
   height: 60px;
+  background-repeat: no-repeat;
 }
 
 .position-button-yes{
@@ -13,14 +17,17 @@
 }
 
 .position-button-no {
+  margin-left: 5px;
   background-image: url(/img/pink_thumb_button_60.png);
 }
 
 .position-button-abstain {
+  margin-left: 5px;
   background-image: url(/img/yellow_thumb_button_60.png);
 }
 
 .position-button-block {
+  margin-left: 5px;
   background-image: url(/img/red_flag_button_60.png);
 }
 
@@ -28,6 +35,7 @@
   display: inline-block;
   width: 60px;
   height: 60px;
+  background-repeat: no-repeat;
 }
 
 .your-position-icon-yes {
