--- a/lineman/app/templates/proposal_card.haml
+++ b/lineman/app/templates/proposal_card.haml
@@ -11,14 +11,12 @@
     %i.fa.fa-clock-o
     %span.bump Closes {{proposal.closingAt | exactDateWithTime }}
 
-  .proposal-card-pie-chart
-    .row
-      .col-xs-6
-        %canvas{tc-chartjs-pie: '', chart-data: "pieChartData", chart-options: "pieChartOptions", width: "350", height: "350"}
-      .col-xs-6
-        .pie-chart-legend
-          .pie-chart-legend-item{class: 'pie-chart-legend-item-{{position}}', ng-repeat: 'position in proposal.positions'}
-            {{ "proposal_position_"+position | translate}} ({{ proposal.voteCounts[position] }})
+  .pie-chart.media
+    .pie-chart-pie.pull-left
+      %proposal_pie_chart{proposal: 'proposal', width: '100', height: '100'}
+    .pie-chart-legend.media-body
+      .pie-chart-legend-item{class: 'pie-chart-legend-item-{{position}}', ng-repeat: 'position in proposal.positions'}
+        {{ "proposal_position_"+position | translate}} ({{ proposal.voteCounts[position] }})
 
   %vote_form{proposal: 'proposal'}
 
