--- a/lineman/app/templates/vote_form.haml
+++ b/lineman/app/templates/vote_form.haml
@@ -16,8 +16,9 @@
             %span{translate: 'vote_form.select_position', ng-show: '!newVote.position'}
           %textarea#vote-statement-field.form-control{ng-model: 'newVote.statement', placeholder: '{{ "vote_form.statement_placeholder" | translate }}'}
 
-      %button.btn.btn-primary{type: 'submit', translate: 'vote_form.submit_position'}
-      %button.btn.btn-warning{ng-click: 'cancel($event)', translate: 'common.action.cancel'}
+      %button.btn.btn-primary{type: 'submit', translate: 'vote_form.submit_position'}>
+
+      %button.btn.btn-default{ng-click: 'cancel($event)', translate: 'common.action.cancel'}>
 
   .your-position{ng-show: 'lastVote && !editing'}
     %h3{translate: 'proposal_card.your_position'}
