--- a/lineman/app/css/layout.scss
+++ b/lineman/app/css/layout.scss
@@ -22,6 +22,7 @@ $navbarGrey: #CCC;
 .loomio-nav-dropdown {
 
 }
+
 .drawer {
   min-width: 320px;
   list-style-type: none;
@@ -34,6 +35,9 @@ $navbarGrey: #CCC;
   padding: 0 15px;
 }
 .drawer-item {
+  a:hover{
+    text-decoration: none;
+  }
   border-top: 1px solid #ddd;
   padding: 15px;
 }
