add mvp RTL support (only for comments, discussion)

--- a/app/assets/stylesheets/unstructured/_main.css.scss
+++ b/app/assets/stylesheets/unstructured/_main.css.scss
@@ -435,3 +435,7 @@ form{
 }
 
 .tooltip.bottom .tooltip-arrow{ top: 0 !important; }
+
+[dir='RTL'] { text-align: right; }
+[dir='LTR'] { text-align: left; }
+.text-left[dir='RTL'] { text-align: left; }
