--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -18,7 +18,7 @@
               = link_to [:edit, comment] do
                 .edit-icon.edit-icon-small.edit-comment.js-tooltip{title: t(:'edit_comment.edit_comment')}
                   %i.fa.fa-pencil
-        .activity-item-header
+        .activity-item-header{dir: text_direction(comment)}
           ~ add_mention_links(render_rich_text(comment.body.to_s.force_encoding("UTF-8"), comment.uses_markdown?)).html_safe
           .translation-spacer.translated
           .activity-item-translation.translated
