--- a/app/views/marketing/index.html.haml
+++ b/app/views/marketing/index.html.haml
@@ -11,7 +11,7 @@
     = csrf_meta_tags
     = render 'social_metadata'
 
-  %body{class: "#{controller_name} #{action_name}"}
+  %body{class: "#{controller_name} #{action_name}", dir: language_dir(current_locale)}
     - analytics_scope do
       = render 'google_tag_manager'
     = render 'flash_messages'
