--- a/lineman/app/templates/add_comment.haml
+++ b/lineman/app/templates/add_comment.haml
@@ -2,14 +2,10 @@
   .pull-left
     %img{src: 'http://placehold.it/40x40'}
   .media-body
-    %form{name: 'addCommentForm', ng_submit: 'submit()'}
-      .card-row.fake
-        %input.form-control{placeholder: "Write a comment...", ng_focus: "expand()", id: 'fake_comment_input'}
-      .card-row.real
-        .left
-          %textarea#comment-field.form-control{name: 'body', rows: 5, placeholder: "Say something...", ng_blur: "collapseIfEmpty()", ng_model: 'comment.body'}
-        .right
-          %button#post-comment-btn.btn.btn-default.btn-block.submit{type: 'submit'} Post
+    .card-row.fake{ng-hide: 'isExpanded'}
+      %input.form-control{placeholder: "Write a comment...", ng_focus: "expand()", id: 'fake_comment_input'}
+    .card-row.real{ng-show: 'isExpanded'}
+      %comment_form{comment: 'comment'}
 
       -#.comment-row.comment-attachments{ng_repeat: 'attachment in comment.attachments()'}
         -#%a.attachment-link{ng_href: '{{attachment.location}}', target: '_blank'}
