--- a/app/views/admin/stats/first_30_days.html.haml
+++ b/app/views/admin/stats/first_30_days.html.haml
@@ -5,6 +5,7 @@
       %th ID
       %th Name
       %th Day
+      %th Days old
       %th Subgroups
       %th Discussions
       %th Comments
@@ -15,11 +16,15 @@
       %th Financial nature
       %th Creator ID
       %th Locale
+      %th Total
+      %th Delta
+    - yesterday = 0
     - @metrics.each do |m|
       %tr
         %td= m.fetch(:id)
         %td= m.fetch(:name)
         %td= m.fetch(:day)
+        %td= m.fetch(:days_old)
         %td= m.fetch(:subgroups)
         %td= m.fetch(:discussions)
         %td= m.fetch(:comments)
@@ -30,3 +35,6 @@
         %td= m.fetch(:financial_nature)
         %td= m.fetch(:creator_id)
         %td= m.fetch(:locale)
+        %td= m.fetch(:total)
+        %td= m.fetch(:total) - yesterday
+        - yesterday = m.fetch(:total)
