--- a/app/views/thread_mailer/motion_closing_soon.html.haml
+++ b/app/views/thread_mailer/motion_closing_soon.html.haml
@@ -1,11 +1,6 @@
 %p= t(:"email.thread_mailer.motion_closing_soon")
 
-%table
-  %tr
-    %td
-      = render 'motion_with_positions', motion: @motion
-    %td
-      = render_rich_text(@motion.description, false)
+= render 'motion_with_positions'
 
 - unless @motion.user_has_voted?(@recipient)
   %h4= t(:"help.have_your_say")
