edit comment works now

--- a/lineman/app/templates/discussion_items/new_comment.haml
+++ b/lineman/app/templates/discussion_items/new_comment.haml
@@ -4,7 +4,7 @@
       %i.fa.fa-chevron-down
     %ul.dropdown-menu
       %li
-        %a{href: '', ng-click: 'showEditComment()', ng-if: '::canEditComment()'} Edit comment
+        %a{href: '', ng-click: 'editComment()', ng-if: '::canEditComment()'} Edit comment
         %a{href: ''} Delete comment
   .thread-event-header.media
     .pull-left{ng-include: "'generated/templates/user/avatar.html'", ng-init: 'user = comment.author()'}
