--- a/lineman/app/templates/edit_comment.haml
+++ b/lineman/app/templates/edit_comment.haml
@@ -2,6 +2,6 @@
   %button{type: 'button', class: 'close', ng-click: 'cancel()'}
     %span{aria-hidden: true} &times;
     %span.sr-only{translate: 'common.action.cancel'}
-  %h3.modal-title Edit comment
+  %h3.modal-title{translate: 'comment_form.edit_comment'}
 .modal-body
   %comment_form{comment: 'comment'}
