resful_controller is lookin good now

--- a/lineman/app/templates/delete_comment_dialog.haml
+++ b/lineman/app/templates/delete_comment_dialog.haml
@@ -8,5 +8,6 @@
   %span{translate: 'delete_comment_dialog.question'}
 
 .modal-footer
+  %a.btn.btn-primary{ng-click: 'console.log("hello")'} hi
   %button.btn.btn-primary{ng-click: 'ok()', translate: 'delete_comment_dialog.confirm'}
   %button.btn.btn-primary{ng-click: 'cancel()', translate: 'common.action.cancel'}
