--- a/lineman/app/templates/inbox.haml
+++ b/lineman/app/templates/inbox.haml
@@ -10,7 +10,7 @@
         .time-ago{timestamp: 'discussion.lastActivityAt'}
       .drawer-item-discussion-title
         {{discussion.title}}
-      .drawer-item-proposal.media{ng-show: 'discussion.activeProposal()', ng-init: 'proposal = discussion.activeProposal()'}
+      .drawer-item-proposal.media{ng-if: 'discussion.activeProposal()', ng-init: 'proposal = discussion.activeProposal()'}
         .pull-left
           %mini_proposal_pie_chart{proposal: 'proposal'}
         .drawer-item-proposal-details.media-body
