--- a/lineman/app/templates/group.haml
+++ b/lineman/app/templates/group.haml
@@ -6,14 +6,14 @@
         .group-name
           %h1 {{group.name}}
         .group-description
-          %h2 Description
+          %h2 {{ 'group.description' | translate }}
           .group-description{btf-markdown: 'group.description' }
         .group-threads
-          %h2 Threads
+          %h2 {{ 'group.discussions' | translate }}
           %discussions{group: 'group'}
         .group-members
-          %h2 Members
+          %h2 {{ 'group.members' | translate }}
           %members{group: 'group'}
         .group-subgroups
-          %h2 Subgroups
+          %h2 {{ 'group.subgroups' | translate }}
           %subgroups{group: 'group'}
