--- a/lineman/app/templates/members.haml
+++ b/lineman/app/templates/members.haml
@@ -2,6 +2,6 @@
   .member{ng-repeat: 'member in group.members()'}
     {{ member.name }}
   .members-show-more.show-more
-    %a{href: '#'} Show More...
+    %a{href: '#'} {{ 'group.show_more' | translate }}
   .members-invite
-    %a Invite members
+    %a{href: '#'} {{ 'group.invite_members' | translate }}
