--- a/lineman/app/templates/subgroups.haml
+++ b/lineman/app/templates/subgroups.haml
@@ -2,6 +2,6 @@
   .subgroup{ng-repeat: 'subgroup in group.subgroups()'}
     {{ subgroup.name }}
   .subgroups-show-more.show-more
-    %a{href: '#'} Show More...
+    %a{href: '#'} {{ 'group.show_more' | translate }}
   .subgroups-invite
-    %a{href: '#'} Invite members
+    %a{href: '#'} {{ 'group.add_subgroup' | translate }}
