--- a/lineman/app/templates/invitation_modal.haml
+++ b/lineman/app/templates/invitation_modal.haml
@@ -9,7 +9,9 @@
         %strong {{ 'invitation.import_contacts_header' | translate }}
       .contact-flash-message
         {{ 'invitation.import_contacts_message' | translate }}
-    %h4 {{ 'invitation.find_people' | translate }}
+    %h4.pull-left {{ 'invitation.find_people' | translate }}
+    %a.pull-right{href: '#'} 
+      {{ 'invitation.import_contacts' | translate }}
     %input.form-control{ng-model: 'fragment', typeahead: 'invitable for invitable in getInvitables($viewValue)', typeahead-template-url: 'generated/templates/invitable_menu.html', typeahead-on-select: 'addInvitation($item)', typeahead-wait-ms: '300'}
     .invitation-instructions{ng_hide: 'hasInvitations()'}
       {{ 'invitation.instructions' | translate }}
