--- a/lineman/app/templates/invitation_modal.haml
+++ b/lineman/app/templates/invitation_modal.haml
@@ -1,10 +1,11 @@
 %form{ng-submit: 'submit()'}
   .modal-header
-    %h3 {{ 'invitation.invite_people' | translate }}
-
+    %h3.pull-left {{ 'invitation.invite_people' | translate }}
+    %a.close.pull-right{href: '#', ng-click: 'cancel($event)'} ×
+    .clearfix
   .modal-body
     .alert.alert-success{ng_show: 'showContactImportMessage'}
-      %button.close{ng-click: 'dismissContactImportMessage()', type: 'button'} ×
+      %a.close{href: '#', ng-click: 'dismissContactImportMessage()'} ×
       .contact-flash-header
         %strong {{ 'invitation.import_contacts_header' | translate }}
       .contact-flash-message
