--- a/lineman/app/templates/invitation_modal.haml
+++ b/lineman/app/templates/invitation_modal.haml
@@ -13,7 +13,7 @@
     %h4.pull-left {{ 'invitation.find_people' | translate }}
     %a.pull-right{href: '#'} 
       {{ 'invitation.import_contacts' | translate }}
-    %input.form-control{ng-model: 'fragment', typeahead: 'invitable for invitable in getInvitables($viewValue)', typeahead-template-url: 'generated/templates/invitable_menu.html', typeahead-on-select: 'addInvitation($item)', typeahead-wait-ms: '300'}
+    %input.form-control#invitable-email{type: 'email', ng-model: 'fragment', typeahead: 'invitable for invitable in getInvitables($viewValue)', typeahead-template-url: 'generated/templates/invitable_menu.html', typeahead-on-select: 'addInvitation($item)', typeahead-wait-ms: '300'}
     .invitation-instructions{ng_hide: 'hasInvitations()'}
       {{ 'invitation.instructions' | translate }}
     .current-invitations{ng_show: 'hasInvitations()'}
