--- a/lineman/app/templates/proposals.haml
+++ b/lineman/app/templates/proposals.haml
@@ -1,6 +1,6 @@
-.proposals
+.proposals-card
   .proposal{ng_repeat: 'proposal in discussion.proposals()'}
-    .active-proposal{ng_show: 'isSelectedProposal(proposal)'}
+    .active-proposal{ng-if: 'isSelectedProposal(proposal)'}
       %proposal_card{proposal: 'proposal'}
-    .inactive-proposal{ng_hide: 'isSelectedProposal(proposal)', ng_click: 'setSelectedProposal(proposal)'}
+    .inactive-proposal{ng-if: '!isSelectedProposal(proposal)', ng_click: 'setSelectedProposal(proposal)'}
       %proposal_card_collapsed{proposal: 'proposal'}
