--- a/lineman/app/templates/proposals.haml
+++ b/lineman/app/templates/proposals.haml
@@ -1,5 +1,5 @@
-.proposals-card
-  .proposal{ng_repeat: 'proposal in discussion.proposals()'}
+.thread-proposals
+  %div{ng_repeat: 'proposal in discussion.proposals()'}
     .active-proposal{ng-show: 'isSelectedProposal(proposal)'}
       %proposal_card{proposal: 'proposal'}
     .inactive-proposal{ng-hide: 'isSelectedProposal(proposal)', ng_click: 'setSelectedProposal(proposal)'}
